# OCEAN-beta

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/LinearHE/: CMakeLists.txt  utils-HE.cpp
tests/: CMakeLists.txt  test_ocean.cpp  test_relu.cpp  test_reluconv.cpp
